Renamed endpoint and updated response format; converted plan values to user's currency